--- a/index.j2
+++ b/index.j2
@@ -1,5 +1,3 @@
 <?
-$command="/sbin/ifconfig eth0 | grep 'inet addr:' | cut -d: -f2 | awk '{ print $1}'";
-$localIP = exec ($command);
-echo $localIP;
+echo "{{ ansible_eth0.ipv4.address }}"
 ?>
